# E6.8_homework

./: .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
config/app/: .env
config/redis/: .env
src/: Dockerfile  pyproject.toml
src/app/: __init__.py  base.py  main.py
src/config/: main.py
src/logger/: __init__.py  helper.py  main.py
src/redis_client/: __init__.py  config.py  helper.py  main.py
src/tests/: conftest.py  test_app.py  test_logger.py  test_main.py  test_redis_client.py
